# Best_egg

nytimes_microservice/: README.md  pyproject.toml  requirements.txt
nytimes_microservice/app/: main.py
nytimes_microservice/app/api/v1/: nytimes.py
nytimes_microservice/app/core/: settings.py
nytimes_microservice/app/models/: nytimes.py
nytimes_microservice/app/services/: nyt_client.py
nytimes_microservice/app/utils/: error_handler.py  logger.py
nytimes_microservice/tests/: test_api.py  test_nytimes.py
