[tool.black]
line-length = 88
target-version = ['py311']
include = '\.py$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-docstring",
    "invalid-name",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "duplicate-code"
]

[tool.pylint.BASIC]
good-names = ["i", "j", "k", "ex", "Run", "_"]

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pytest.ini_options]
addopts = "-ra -q --tb=short"
testpaths = [
    "nytimes_microservice/app/tests"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
